--- a/notebooks/TADs.Rmd
+++ b/notebooks/TADs.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "TAD Analysis"
+title: "TAD Analysis for 16p"
 author: "Siddharth Reed"
 date: "`r Sys.Date()`"
 output: 
@@ -19,21 +19,21 @@ output:
 }
 </style>
 
-# Prepare data
+# Set Up
 
 ```{r knitr}
 library(knitr)
 knitr::opts_chunk$set(
-    dev=c('png', 'pdf', 'tiff'),
+    dev=c('png', 'pdf', 'svg'),
     dpi=300
 )
 ```
-Set up file locations + load dependenies
+Set up file locations + load dependences
 ```{r file_locs, results=FALSE, message=FALSE, warning=FALSE}
 library(here)
-BASE_DIR <- here::i_am('notebooks/TADs.Rmd')
-SCRIPT_DIR <- here('scripts')
-source(file.path(SCRIPT_DIR, 'locations.R'))
+here::i_am('notebooks/TADs.Rmd')
+BASE_DIR <- here()
+source(file.path(here(), 'scripts', 'locations.R'))
 source(file.path(SCRIPT_DIR, 'constants.R'))
 source(file.path(SCRIPT_DIR, 'utils.data.R'))
 source(file.path(SCRIPT_DIR, 'utils.plot.R'))
@@ -49,20 +49,58 @@ library(purrr)
 
 Load all TAD Annotations
 ```{r load_TADs}
+# library(furrr); plan(multisession, workers=length(availableWorkers()) / 2)
+# library(furrr); plan(multisession, workers=6)
+# library(furrr); plan(multisession, workers=12)
 tad.annotations <- 
     check_cached_results(
         results_file=TAD_RESULTS_FILE,
         results_fnc=load_all_TAD_annotations,
-        force_redo=TRUE,
+        force_redo=FALSE,
         return_data=TRUE,
         show_col_types=FALSE
     ) %>% 
+    filter(ReadFilter == 'mapq_30') %>% 
+    select(-c(ReadFilter, region, is_boundary)) %>% 
+    separate_wider_delim(
+        Sample.ID,
+        delim=fixed('.'),
+        cols_remove=FALSE,
+        names=
+            c(
+                'Edit',
+                'Genotype',
+                'SampleNumber',
+                'Celltype'
+            )
+    ) %>% 
+    filter(Celltype != 'iN') %>% 
     mutate(
-        resolution=as.integer(resolution),
-        chr=factor(chr, levels=CHROMOSOMES)
-    ) 
-tad.annotations %>% head(2) %>% t()
-tad.annotations %>% count(method, resolution, weight, threshold, mfvp, Sample.ID)
+        chr=factor(chr, levels=CHROMOSOMES),
+        isMerged=ifelse(grepl('Merged', SampleNumber), 'Merged', 'Individual')
+    )
+```
+Columns for TAD annotations:
+- Sample Attributes
+  - Sample.ID
+  - Edit
+  - Genotype
+  - SampleNumber
+  - Celltype
+  - isMerged
+- Calling Parameters
+  - method
+  - resolution
+  - weight
+  - threshold
+  - mfvp
+  - window.size
+- Individual TAD data
+  - chr
+  - TAD.start
+  - TAD.end
+  - n_valid_pixels
+  - boundary_strength
 Separate results per method
 ```{r methods.dfs}
 # tad.annotations %>% colnames()
@@ -454,7 +492,7 @@ hitad.mocs %>%
 
 # Load Directionality Index scores
 
-```{r load_DI}
+```{r load_DI, eval=FALSE}
 DI.scores <- 
     load_all_TAD_annotations(
         tad_annotations_dir=glue('{BASE_DIR}/results/TADs/hiTAD'),
@@ -487,7 +525,7 @@ DI.scores %>% head(2) %>% t()
 
 # Plot DI Scores
 
-```{r plot_DI}
+```{r plot_DI, eval=FALSE}
 tmp <- 
     DI.scores %>%
     add_count(Resolution, SampleName, chr, name='n.bins') %>% 
@@ -550,4 +588,32 @@ tmp %>%
         align='v',
         ncol=1
     )
+```
+
+# Scratch
+
+```{r print_stuff, eval=FALSE}
+cooltools.annotations
+cooltools.annotations %>% colnames()
+hitad.annotations %>% colnames()
+hitad.annotations
+hitad.mocs
+```
+
+```{r eval=FALSE}
+tad.annotations %>% 
+    rowwise() %>% 
+    mutate(nTADs=TADs %>% nrow()) %>% 
+    ungroup() %>% 
+    summarize(nTADs=sum(nTADs))
+tad.annotations %>% 
+    rowwise() %>% 
+    mutate(nTADs=TADs %>% filter(is_boundary) %>% nrow()) %>% 
+    ungroup() %>% 
+    summarize(nTADs=sum(nTADs))
+tad.annotations %>% 
+    rowwise() %>% 
+    mutate(nTADs=TADs %>% filter(is_boundary) %>% nrow()) %>% 
+    group_by(method, resolution, weight) %>% 
+    summarize(as_tibble_row(summary(nTADs)))
 ```
